ft(search):adding a search engine for departure, trip requester and destination - add a search controller - test search endpoint
[finishes #174772231]
