# src/controllers/search.js
@@ -1,38 +1,94 @@
-import sequelize from 'sequelize';
 import models from '../database/models';
 
-const { Op } = sequelize;
-const { trip } = models;
+const { trip, location, users } = models;
 
 class Search {
   // eslint-disable-next-line class-methods-use-this
   searchEngine(req, res) {
     const {
-      owner, destination, origin
+      destination, departure
     } = req.query;
 
-    return trip.findAll({
-      where: {
-        [Op.or]: [{ requester_id: owner || null },
-          { from: origin || null },
-          { to: destination || null }]
-      },
-      include: [{
-        model: models.users,
-        as: 'requester'
-      }, {
-        model: models.location,
-        as: 'departure'
-      }, {
-        model: models.location,
-        as: 'destination'
-      }]
-    }).then(result => {
-      if (result.length > 0) {
-        return res.status(200).json({ message: 'Results successfully Found', result });
-      }
-      return res.status(404).json({ Error: 'no results found' });
-    }).catch(error => res.status(500).json({ Error: 'Unexpected Error' }));
+    let destinationId;
+    let departureId;
+
+    if (destination) {
+      return location.findOne({
+        returning: true,
+        where: {
+          city: destination
+        }
+      }).then(data => {
+        destinationId = data.dataValues.id;
+
+        return trip.findAll({
+          where: {
+            to: destinationId
+          },
+          include: [{
+            model: users,
+            as: 'requester',
+            attributes: ['firstName', 'lastName']
+          }, {
+            model: location,
+            as: 'departure',
+            attributes: ['city']
+          }, {
+            model: location,
+            as: 'destination',
+            attributes: ['city']
+          }],
+          attributes: ['travel_type', 'return_date', 'travel_date', 'travel_reason']
+        }).then(trips => {
+          if (trips.length > 0) {
+            return res.status(200).json({
+              message: 'Results successfully Found',
+              trips
+            });
+          }
+          return res.status(200).json({ message: 'No trips related with this destination city found!' });
+        }).catch(error => res.status(500).json({ Error: 'Unexpected Error' }));
+      }).catch(err => res.status(404).json({ Error: 'No such Destination Found!' }));
+    }
+
+    if (departure) {
+      return location.findOne({
+        returning: true,
+        where: {
+          city: departure
+        }
+      }).then(data => {
+        departureId = data.dataValues.id;
+
+        return trip.findAll({
+          where: {
+            from: departureId
+          },
+          include: [{
+            model: users,
+            as: 'requester',
+            attributes: ['firstName', 'lastName']
+          }, {
+            model: location,
+            as: 'departure',
+            attributes: ['city']
+          }, {
+            model: location,
+            as: 'destination',
+            attributes: ['city']
+          }],
+          attributes: ['travel_type', 'return_date', 'travel_date', 'travel_reason']
+        }).then(trips => {
+          if (trips.length > 0) {
+            return res.status(200).json({
+              message: 'Results successfully Found',
+              trips
+            });
+          }
+          return res.status(200).json({ message: 'No trips related with this departure city found!' });
+        }).catch(error => res.status(400).json({ Error: 'Unexpected Error' }));
+      }).catch(err => res.status(404).json({ Error: 'No such Departure Place Found!' }));
+    }
   }
 }
 
