# swagger.json
@@ -26,15 +26,13 @@
                 "summary": "Signup",
                 "description": "Create account",
                 "operationId": "createUser",
-                "parameters": [
-                    {
-                        "in": "body",
-                        "name": "body",
-                        "schema": {
-                            "$ref": "#/definitions/userSignUp"
-                        }
+                "parameters": [{
+                    "in": "body",
+                    "name": "body",
+                    "schema": {
+                        "$ref": "#/definitions/userSignUp"
                     }
-                ],
+                }],
                 "produces": [
                     "application/json"
                 ],
@@ -59,15 +57,13 @@
                 "summary": "forgot password",
                 "description": "User forgot password",
                 "operationId": "forgot",
-                "parameters": [
-                    {
-                        "in": "body",
-                        "name": "body",
-                        "schema": {
-                            "$ref": "#/definitions/forgotPassword"
-                        }
+                "parameters": [{
+                    "in": "body",
+                    "name": "body",
+                    "schema": {
+                        "$ref": "#/definitions/forgotPassword"
                     }
-                ],
+                }],
                 "produces": [
                     "application/json"
                 ],
@@ -81,6 +77,42 @@
                 }
             }
         },
+
+        "/api/trips/search?": {
+            "get": {
+                "tags": [
+                    "Search Trips"
+                ],
+                "summary": "Search Owners of trips",
+                "description": "Search for different fields",
+                "operationId": "search",
+                "parameters": [{
+                    "in": "query",
+                    "name": "departure",
+                    "schema": {
+                        "type": "string"
+                    }
+                }, {
+                    "in": "query",
+                    "name": "destination",
+                    "schema": {
+                        "type": "string"
+                    }
+                }],
+                "produces": [
+                    "application/json"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "search result found"
+                    },
+                    "404": {
+                        "description": "no results found"
+                    }
+                }
+            }
+        },
+
         "/api/profiles/{id}": {
             "get": {
                 "tags": [
@@ -89,14 +121,12 @@
                 "summary": "Get the profile of the user",
                 "description": "Get user's profile",
                 "operationId": "getProfile",
-                "parameters": [
-                    {
-                        "in": "path",
-                        "name": "id",
-                        "type": "number",
-                        "required": true
-                    }
-                ],
+                "parameters": [{
+                    "in": "path",
+                    "name": "id",
+                    "type": "number",
+                    "required": true
+                }],
                 "produces": [
                     "application/json"
                 ],
@@ -113,8 +143,7 @@
                 "summary": "Get the profile of the user",
                 "description": "Get user's profile",
                 "operationId": "updateProfile",
-                "parameters": [
-                    {
+                "parameters": [{
                         "in": "path",
                         "name": "id",
                         "type": "number",
@@ -146,10 +175,9 @@
                 "summary": "reset password",
                 "description": "User reset password",
                 "operationId": "reset",
-                "parameters": [
-                    {
+                "parameters": [{
                         "name": "resetLinkToken",
-                        "in": "header",
+                        "in": "path",
                         "required": true,
                         "type": "string",
                         "description": "token on the reset link"
@@ -210,17 +238,15 @@
                 "summary": "User Login Endpoint",
                 "description": "sign-in the user",
                 "operationId": "signIn",
-                "parameters": [
-                    {
-                        "in": "body",
-                        "name": "body",
-                        "description": "User credentials needed to login in",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/userLogin"
-                        }
+                "parameters": [{
+                    "in": "body",
+                    "name": "body",
+                    "description": "User credentials needed to login in",
+                    "required": true,
+                    "schema": {
+                        "$ref": "#/definitions/userLogin"
                     }
-                ],
+                }],
                 "responses": {
                     "200": {
                         "description": "user logged in successfully"
@@ -236,16 +262,14 @@
                 "summary": "confirm registrations",
                 "description": "Confirmation of registrations",
                 "operationId": "useremail",
-                "parameters": [
-                    {
-                        "in": "path",
-                        "name": "email",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/userUpdate"
-                        }
+                "parameters": [{
+                    "in": "path",
+                    "name": "email",
+                    "required": true,
+                    "schema": {
+                        "$ref": "#/definitions/userUpdate"
                     }
-                ],
+                }],
                 "produces": [
                     "application/json"
                 ],
@@ -264,8 +288,7 @@
                 "summary": "change user roles",
                 "description": "change user roles",
                 "operationId": "changeRole",
-                "parameters": [
-                    {
+                "parameters": [{
                         "in": "header",
                         "name": "token",
                         "required": true,
@@ -299,55 +322,6 @@
                 }
             }
         },
-        "/api/trips/{id}/comment": {
-            "post": {
-                "tags": [
-                    "Users"
-                ],
-                "summary": "posting comment on travel request",
-                "description": "travel request comment",
-                "operationId": "postComment",
-                "parameters": [
-                    {
-                        "in": "header",
-                        "name": "token",
-                        "required": true,
-                        "type": "string",
-                        "description": "token"
-                    },
-                    {
-                        "in": "path",
-                        "name": "id",
-                        "type": "number",
-                        "required": true
-                    },
-                    {
-                        "in": "body",
-                        "name": "body",
-                        "schema": {
-                            "$ref": "#/definitions/postComment"
-                        }
-                    }
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "responses": {
-                    "200": {
-                        "description": "comment submitted successfully"
-                    },
-                    "401": {
-                        "description": "invalid token"
-                    },
-                    "400": {
-                        "description": "bad request"
-                    },
-                    "404": {
-                        "description": "user not found"
-                    }
-                }
-            }
-        },
         "/api/trips/list": {
             "get": {
                 "tags": [
@@ -356,15 +330,13 @@
                 "summary": "List of comments",
                 "description": "travel request comment",
                 "operationId": "getlist",
-                "parameters": [
-                    {
-                        "in": "header",
-                        "name": "token",
-                        "required": true,
-                        "type": "string",
-                        "description": "token"
-                    }
-                ],
+                "parameters": [{
+                    "in": "header",
+                    "name": "token",
+                    "required": true,
+                    "type": "string",
+                    "description": "token"
+                }],
                 "produces": [
                     "application/json"
                 ],
@@ -389,8 +361,7 @@
                 "summary": "delete a comment",
                 "description": "delete a comment",
                 "operationId": "deleteComment",
-                "parameters": [
-                    {
+                "parameters": [{
                         "in": "header",
                         "name": "token",
                         "required": true,
@@ -428,8 +399,7 @@
                 "tags": [
                     "Users"
                 ],
-                "parameters": [
-                    {
+                "parameters": [{
                         "in": "header",
                         "name": "token",
                         "required": true,
@@ -469,15 +439,13 @@
                 "summary": "getting all requests",
                 "description": "users can get trip requests",
                 "operationId": "getRequests",
-                "parameters": [
-                    {
-                        "in": "header",
-                        "name": "token",
-                        "required": true,
-                        "type": "string",
-                        "description": "token"
-                    }
-                ],
+                "parameters": [{
+                    "in": "header",
+                    "name": "token",
+                    "required": true,
+                    "type": "string",
+                    "description": "token"
+                }],
                 "produces": [
                     "application/json"
                 ],
@@ -499,8 +467,7 @@
                 "tags": [
                     "Users"
                 ],
-                "parameters": [
-                    {
+                "parameters": [{
                         "in": "header",
                         "name": "token",
                         "required": true,
@@ -543,8 +510,7 @@
                 "tags": [
                     "Users"
                 ],
-                "parameters": [
-                    {
+                "parameters": [{
                         "in": "header",
                         "name": "token",
                         "required": true,
@@ -578,6 +544,7 @@
             }
         }
     },
+
     "definitions": {
         "getProfile": {
             "properties": {
@@ -651,13 +618,7 @@
                 }
             }
         },
-        "postComment": {
-            "properties": {
-                "comment": {
-                    "type": "string"
-                }
-            }
-        },
+
         "users": {
             "properties": {
                 "firstName": {
